Abgabe Tutor kompiliert

--- a/versuch_3/bibliography.tex
+++ b/versuch_3/bibliography.tex
@@ -1,7 +1,6 @@
 \pagebreak
 \begin{thebibliography}{9}
-\bibitem[Hec]{hechtoptik} Hecht, Eugene. Optik. Oldenbourg Verlag, 2005.
-\bibitem[Bre]{praktikumwaerme} Brehm, Prof. Dr. Axel. Praktikum der Technischen Chemie Waermeuebertragung. Uni Oldenburg, 2009. www.uni-oldenburg.de/tchemie/Praktikum/Waermeuebertragung.pdf (29. November 2013)
-\bibitem[Fey]{feynman2011feynman}Feynman, Richard P and Leighton, Robert B and Sands, Matthew. Feynman-Vorlesungen ueber Physik, Band 1: Mechanik, Strahlung, Waerme, Ausgabe 5. Oldenburg Verlag, 2007.
-\bibitem[Rei]{wiki} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
+\bibitem[Demt]{roeder} DEMTRÖDER, Wolfgang. Experimentalphysik 1: Mechanik und Warme. Springer DE, 2005.
+\bibitem[Reib]{wiki} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
+\bibitem[Eul]{eul} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
 \end{thebibliography}
