--- a/versuch_3/header.tex
+++ b/versuch_3/header.tex
@@ -51,7 +51,7 @@
 
 %Schaltbilder malen
 %\usepackage[europeanresistors,cuteinductors,siunitx]{circuitikz}
-
+\usepackage{comment}
 \usepackage{csquotes}
 
 %Formatierungsanweisungen
