--- a/versuch_3/anhang.tex
+++ b/versuch_3/anhang.tex
@@ -3,141 +3,18 @@
 \begin{table}[h]
 \scriptsize
 \centering
-\begin{tabular}{rl}
-t in s & T in $^{\circ}C$\\
+\begin{tabular}{rllll}
+t & x-Pos. $m_1$ & y-Pos $m_1$ & x-Pos. $m_2$ & y-Pos. $m_2$ \\
 \toprule
-20	&	-129,68\\
-40	&	-126,28\\
-60	&	-122,58\\
-80	&	-119,19\\
-100	&	-115,60\\
-120	&	-112,51\\
-140	&	-109,13\\
-160	&	-106,18\\
-180	&	-103,22\\
-200	&	-99,93\\
-220	&	-97,27\\
-240	&	-94,43\\
-260	&	-91,52\\
-280	&	-88,80\\
-300	&	-86,22\\
-320	&	-83,37\\
-340	&	-81,04\\
-360	&	-78,27\\
-380	&	-75,88\\
-400	&	-73,61\\
-420	&	-71,21\\
-440	&	-68,82\\
-460	&	-66,90\\
-480	&	-64,39\\
-500	&	-62,47\\
-520	&	-60,56\\
-540	&	-58,19\\
-560	&	-55,72\\
-580	&	-54,41\\
-600	&	-52,63\\
-620	&	-50,80\\
-640	&	-49,19\\
-660	&	-47,82\\
-680	&	-46,22\\
-699	&	-44,56\\
-720	&	-43,18\\
-740	&	-41,46\\
-760	&	-39,98\\
-780	&	-38,82\\
-\multicolumn{2}{c}{\dots}\\
-\end{tabular}
-\begin{tabular}{c|c}
-&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\
-\end{tabular}
-\begin{tabular}{rl}
-\multicolumn{2}{c}{\dots}\\
-800	&	-37,34\\
-820	&	-35,86\\
-840	&	-34,65\\
-860	&	-33,38\\
-880	&	-32,12\\
-900	&	-31,02\\
-920	&	-29,60\\
-940	&	-28,39\\
-960	&	-27,34\\
-980	&	-25,97\\
-1000	&	-24,87\\
-1020	&	-23,94\\
-1040	&	-22,35\\
-1060	&	-21,08\\
-1080	&	-20,09\\
-1100	&	-19,20\\
-1120	&	-18,16\\
-1140	&	-17,23\\
-1160	&	-16,24\\
-1180	&	-15,30\\
-1200	&	-14,52\\
-1220	&	-13,43\\
-1240	&	-12,64\\
-1260	&	-11,81\\
-1280	&	-10,77\\
-1299	&	-9,93\\
-1320	&	-9,31\\
-1340	&	-8,58\\
-1360	&	-7,23\\
-1380	&	-6,81\\
-1400	&	-5,82\\
-1420	&	-5,20\\
-1440	&	-4,57\\
-1460	&	-3,84\\
-1480	&	-3,43\\
-1500	&	-3,01\\
-1520	&	-2,12\\
-1540	&	-1,71\\
-1560	&	-0,87\\
-\multicolumn{2}{c}{\dots}\\
-\end{tabular}
-\begin{tabular}{c|c}
-&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\&\\
-\end{tabular}
-\begin{tabular}{rl}
-\multicolumn{2}{c}{\dots}\\
-1580	&	-0,30\\
-1600	&	-0,04\\
-1620	&	0,31\\
-1640	&	0,71\\
-1660	&	0,81\\
-1680	&	1,26\\
-1700	&	1,61\\
-1720	&	2,27\\
-1740	&	2,92\\
-1760	&	3,27\\
-1780	&	3,57\\
-1800	&	4,17\\
-1820	&	4,23\\
-1840	&	4,38\\
-1860	&	4,89\\
-1880	&	5,14\\
-1900	&	5,60\\
-1920	&	5,95\\
-1940	&	6,25\\
-1960	&	6,55\\
-1980	&	6,60\\
-2000	&	7,00\\
-2019	&	7,30\\
-2040	&	7,71\\
-2060	&	8,01\\
-2080	&	8,31\\
-2100	&	8,66\\
-2120	&	8,86\\
-2140	&	8,91\\
-2160	&	9,21\\
-2180	&	9,41\\
-2200	&	9,56\\
-2220	&	9,86\\
-2240	&	9,96\\
-2260	&	10,06\\
-2280	&	10,21\\
-2300	&	10,41\\
-2320	&	10,41\\
-2340	&	10,91\\
 \end{tabular}
 \normalsize
-\caption{Temperaturverlauf über die Zeit des Experiments}
+\caption{Verlauf der Position der beiden Massen über die Zeit des Versuchs. Dabei wird t in s und die Position in m gemessen.}
+\label{xy-table}
 \end{table}
+
+
+\begin{figure}
+\centering
+\includegraphics[width=.6\textwidth]{images/pendel-skizze.png}
+\label{pic:skizze_versuchsaufbau}
+\end{figure}
