--- a/versuch_3/bibliography.tex
+++ b/versuch_3/bibliography.tex
@@ -1,6 +1,6 @@
 \pagebreak
 \begin{thebibliography}{9}
-\bibitem[Demt]{roeder} DEMTRÖDER, Wolfgang. Experimentalphysik 1: Mechanik und Warme. Springer DE, 2005.
+\bibitem[Dem]{troeder} DEMTRÖDER, Wolfgang. Experimentalphysik 1: Mechanik und Warme. Springer DE, 2005.
 \bibitem[Reib]{wiki} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
 \bibitem[Eul]{eul} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
 \end{thebibliography}
