--- a/versuch_3/vorwort.tex
+++ b/versuch_3/vorwort.tex
@@ -1,14 +1,3 @@
 \section{Vorwort}
-Ursprünglich wurde das Michelson-Morley-Interferometer von Albert Abraham Michelson (1852 - 1931) und Edward William 
-Morley (1838 - 1923) verwendet, um die Existenz eines Äthers, also eines möglicherweise existierenden Trägermediums von elektromagnetischen Wellen, 
-zu überprüfen. Gäbe es einen solchen Äther, so müsste sich das Labor aufgrund der Erdrotation ebenfalls durch den Äther 
-bewegen und zwar in wechselnder Richtung. Nach dem in der Theorie beschriebenen Aufbau würde dies eine Änderung des zu 
-beobachtenden Interferenzmusters bewirken. Tatsächlich konnte unter korrekter Ausführung dieses Versuches allerdings 
-niemals eine solche Verschiebung festgestellt werden, sodass die Idee des Äthers schließlich fallen gelassen werden 
-musste. Dementsprechend bewegt sich das Licht unabhängig vom Bezugssystem des Beobachters immer mit der 
-Lichtgeschwindigkeit c, was auch als Einsteinsches Relaltivitätsprinzip bekannt ist. Der Grund dafür ist schlicht, 
-dass dieses Prinzip die wesentliche Abänderung des Verständnisses von Raum und Zeit darstellt, welches schließlich zur 
-Lorentz-Transformation und der speziellen Relativitätstheorie führte. Somit kommt diesem Experiment eine herausragende Rolle 
-in der Entwicklung der modernen Physik zu. Tatsächlich kann dieser Versuchsaufbau auch dazu verwendet werden, 
-Längenänderungen im Bereich von Wellenlängen des sichtbaren Lichts zu messen. Speziell wurde dies von uns dazu genutzt, 
-die thermische Ausdehnung eines Metallstabs zu untersuchen. 
+Das Doppelpendel, ein Pendel, an dessen Pendelmasse ein weiteres Pendel befestigt wird, mag zunächst nicht sonderlich interessant erscheinen. Bei genauerer Betrachtung hat dieser simple mechanische Aufbau jedoch einige faszinierende und sogar für aktuelle Forschung relevante Eigenschaften. Das Doppelpendel ist ein einfaches Beispiel für ein chaotisches System, d.h. ein System, dessen zeitliche Entwicklung sich schon bei kleinen Variationen der Anfangsbedingungen stark ändert. Chaotische Systeme haben eine wichtige Bedeutung in der Natur und sind der Hauptfokus eines Teilgebiets der modernen Physik, der Chaosforschung. Mithilfe der Chaosforschung lassen sich z.B. Bevölkerungsentwicklungen, die Bildung von Verkehrsstaus oder das Wetter untersuchen.
+In diesem Versuch soll nun ein Doppelpendel gebaut, die Physik dahinter untersucht und die Bedeutung als chaotisches System am praktischen Beispiel nachvollzogen werden.
