--- a/versuch_3/protokoll.tex
+++ b/versuch_3/protokoll.tex
@@ -2,9 +2,9 @@
 %\includeonly{vorwort,versuchsdurchfuehrung,ergebnisse}
 \begin{document}
 
-\title{Messung der temperaturabhängigen Ausdehnung mit Hilfe eines Michelson-Interferometers}
+\title{Bau eines Doppelpendels als Beispiel für chaotisches Verhalten}
 \subtitle{PPG8}
-\date{Dezember 2013}
+\date{Dezember 2013/ Januar 2014}
 \author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
 \maketitle
 \tableofcontents
