--- a/versuch_3/theorie.tex
+++ b/versuch_3/theorie.tex
@@ -74,7 +74,7 @@ Setzt man diese Terme in (3) ein, erhält man die Bewegungsgleichungen des Syste
 \begin{equation}
 \frac{d}{dt}\frac{\partial L}{\partial\dot{q_i}}-\frac{\partial L}{q_i} = m_2 l_2^2 \ddot{\varphi_2} + m_2 l_1 l_2 (\ddot{\varphi_1} \cos (\varphi_1 - \varphi_2) - \dot{\varphi_1}^2 \sin (\varphi_1 - \varphi_2)) + m_2 g l_2 \sin \varphi_2 = 0
 \end{equation}. 
-Diese können noch vereinfacht werden durch eine Division durch l_1 bzw. l_2: 
+Diese können noch vereinfacht werden durch eine Division durch $l_1$ bzw. $l_2$: 
 \begin{equation}
 (m_1 + m_2) l_1\ddot{\varphi_1} + m_2 l_2 \ddot{\varphi_2} \cos (\varphi_1 - \varphi_2) + m_2 l_2 \dot{\varphi_2}^2 \sin (\varphi_1 - \varphi_2) + (m_1 + m_2) g \ sin \varphi_1 = 0
 \end{equation}
